--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -47,6 +47,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y wget gnupg ca-certificates
 
+      # Install Chromium if browser is chromium
+      - name: Install Chromium
+        if: matrix.browser == 'chromium'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y chromium-browser
+
       # Install global dependencies
       - name: Install global dependencies
         run: yarn global add concurrently
