--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           go-version: '1.25'
 
+      - name: Initialize Docker Swarm
+        run: docker swarm init
+
       - name: Build Go application
         run: go build -o docker-swarm-dashboard
         working-directory: ${{ env.WORKING_DIRECTORY }}
