ci: use Go 1.25 in server-src workflow

--- a/.github/workflows/go-test-server-src.yml
+++ b/.github/workflows/go-test-server-src.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.26rc2'
+          go-version: '1.25'
 
       - name: Run tests for server-src and enforce 90% coverage
         working-directory: ./server-src
