--- a/app-src/package.json
+++ b/app-src/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {},
   "scripts": {
+    "test": "jest",
+    "test:coverage": "jest --coverage --runInBand",
     "start-api-mock": "node mock/api/api-mock.js 3001",
     "start-dev-server": "BROWSER=none webpack serve",
     "open-browser": "open http://localhost:3000#base=\"http%3A%2F%2Flocalhost%3A3001%2F\"",
@@ -63,8 +65,12 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@popperjs/core": "^2.11.8",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
+    "babel-jest": "^30.2.0",
     "babel-loader": "^10.0.0",
     "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
@@ -75,6 +81,8 @@
     "eslint-plugin-prettier": "^5.5.5",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.6",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jotai": "^2.16.2",
     "jotai-location": "^0.6.2",
     "json-server": "0.17.4",
