chore: ignore Cypress dump files (cypress/dumps)

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ yarn-error.log*
 **/cypress/videos/
 app-src/cypress/screenshots/
 app-src/cypress/videos/
+# Cypress dumped HTML/state files used for debugging during test runs
+**/cypress/dumps/
+app-src/cypress/dumps/
