--- a/app-src/package.json
+++ b/app-src/package.json
@@ -79,6 +79,7 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-unused-imports": "^4.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.6",
