chore(ci,test): update lint workflow and add LogsComponent unit test

--- a/.github/workflows/lint-server-src.yml
+++ b/.github/workflows/lint-server-src.yml
@@ -2,11 +2,8 @@ name: Lint server-src
 
 on:
   push:
-    paths:
-      - 'server-src/**'
   pull_request:
-    paths:
-      - 'server-src/**'
+    branches: [master]
 
 jobs:
   golangci-lint:
