ci: build golangci-lint from source (install-mode: source) to match Go toolchain

--- a/.github/workflows/lint-server-src.yml
+++ b/.github/workflows/lint-server-src.yml
@@ -35,5 +35,6 @@ jobs:
         uses: golangci/golangci-lint-action@v4
         with:
           version: v1.59.0
+          install-mode: source
           args: run ./...
           working-directory: server-src
