ci: fix golangci-lint args (remove duplicate 'run')

--- a/.github/workflows/lint-server-src.yml
+++ b/.github/workflows/lint-server-src.yml
@@ -36,5 +36,5 @@ jobs:
         with:
           version: v1.59.0
           install-mode: source
-          args: run ./...
+          args: ./...
           working-directory: server-src
