--- a/app-src/package.json
+++ b/app-src/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/**/*.js",
     "postinstall": "node download-files.js",
     "lint": "eslint src",
+    "lint:css": "stylelint src/**/*.css",
     "build": "webpack --mode production",
     "cy:open": "yarn cypress open",
     "cy:run": "yarn cypress run",
@@ -95,9 +96,11 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.4",
     "react-interval": "^2.1.2",
-    
     "react-use-websocket": "^4.13.0",
     "style-loader": "^4.0.0",
+    "stylelint": "^17.0.0",
+    "stylelint-config-standard": "^40.0.0",
+    "stylelint-config-twbs-bootstrap": "^16.1.0",
     "webpack": "5.104.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.3"
