Add Stylelint to CI workflow and update README badge

--- a/.github/workflows/lint-app-src.yml
+++ b/.github/workflows/lint-app-src.yml
@@ -36,3 +36,7 @@ jobs:
       - name: Run ESLint (app-src)
         working-directory: ./app-src
         run: yarn lint --max-warnings 0
+
+      - name: Run Stylelint (app-src)
+        working-directory: ./app-src
+        run: yarn lint:css
