--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "yarn test": true,
         "yarn format": true,
         "yarn build": true,
-        "yarn run test:coverage": true
+        "yarn run test:coverage": true,
+        "yarn run cy:run": true,
+        "yarn run lint": true
     }
 }
