Apply local changes after rebase: update App.css, ContentRouter, package.json and lockfiles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "yarn build": true,
         "yarn run test:coverage": true,
         "yarn run cy:run": true,
-        "yarn run lint": true
+        "yarn run lint": true,
+        "npm run lint": true
     }
 }
